# esp32-rust

./: .gitignore  Cargo.toml  sp.ps1
src/: main.rs
